Spacing on external issues link in footer per bionicrm

--- a/src/Korobi/WebBundle/Resources/assets/sass/application/base/_footer.scss
+++ b/src/Korobi/WebBundle/Resources/assets/sass/application/base/_footer.scss
@@ -81,6 +81,10 @@ ul.footer--links {
     }
   }
 
+  .external a i {
+    margin-left: 0.2em;
+  }
+
   li.active a {
     @include active-footer-link
   }
